[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "production-webhook-idempotency-guard"
version = "0.1.0"
description = "Production-safe webhook idempotency guard handling retries, concurrency, and crash recovery."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "primeautomation-dev" }
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
